<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/common_top_title" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_1"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_compose_shader_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_compose_shader_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:scaleType="fitCenter" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_2"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_compose_shader_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="PorterDuff及Xfermode详解"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_3"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_4"
            android:textColor="#FF0099CC"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_compose_shader_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_5"
            android:textColor="#FF0099CC"
            android:textSize="16dp"
            android:textStyle="bold" />

        <com.example.custom_round_view.widget.ComposeShadeDstView
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_6"
            android:textColor="#FF0099CC"
            android:textSize="16dp"
            android:textStyle="bold" />

        <com.example.custom_round_view.widget.ComposeShadeSrcView
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_7"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShaderAvoidXfermode_1
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <ImageView
            android:id="@+id/iv_compose_shader_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_8"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/iv_compose_shader_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_9"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_CLEAR
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_10"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_SRC
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_11"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_DST
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_12"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_SRC_OVER
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_13"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_DST_OVER
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_14"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_SRC_IN
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_15"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_DST_IN
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_16"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_SRC_OUT
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_17"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_DST_OUT
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_18"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_SRC_ATOP
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_19"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_DST_ATOP
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_20"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_XOR
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_21"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_DARKEN
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_22"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_LIGHTEN
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_23"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_MULTIPLY
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_24"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_SCREEN
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_25"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_ADD
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="3dp"
            android:lineSpacingMultiplier="1.4"
            android:paddingHorizontal="16dp"
            android:text="@string/message_compose_shader_26"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <com.example.custom_round_view.widget.ComposeShadePorterModeView_OVERLAY
            android:layout_width="match_parent"
            android:layout_height="240dp" />
    </LinearLayout>
</ScrollView>
